--- a/rescue/index.html
+++ b/rescue/index.html
@@ -12,6 +12,7 @@
   </head>
 
   <body>
+    <h2>藍－樂山段基地台 黃－曙光段基地台</h2>
     <div id="map" class="map"/>
 
     <script src="https://cdn.rawgit.com/openlayers/openlayers.github.io/master/en/v5.2.0/build/ol.js"></script>
