Add input for radius

--- a/rescue/index.html
+++ b/rescue/index.html
@@ -13,6 +13,9 @@
 
   <body>
     <h2>藍－樂山段基地台 黃－曙光段基地台</h2>
+    <input type="number" value="19000" oninput="handle1(event)" />
+    <input type="number" value="19000" oninput="handle2(event)" />
+    <div id="slider-range-max"></div>
     <div id="map" class="map"/>
 
     <script src="https://cdn.rawgit.com/openlayers/openlayers.github.io/master/en/v5.2.0/build/ol.js"></script>
